- performance upgrades - switch to recoil state management - switch to react-pan-zoom, instead of scroll

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,3 +36,7 @@ a:hover {
 .ReactModal__Overlay--before-close {
   opacity: 0;
 }
+
+.react-transform-component {
+  overflow: initial !important;
+}
