--- a/styles/timeline/Hour.module.css
+++ b/styles/timeline/Hour.module.css
@@ -1,5 +1,5 @@
 .hour {
-  @apply h-7 bg-gray-600 text-xs flex items-center justify-center;
+  @apply h-7 bg-gray-600 text-xs flex items-center justify-center relative;
 }
 
 .hour:nth-child(2n) {
@@ -10,40 +10,31 @@
   @apply h-7 bg-green-600;
 }
 
-.hour.current {
-  @apply bg-yellow-400 text-gray-900 relative !important;
-}
-
-.hour.current::before {
-  content: '';
-  @apply border-l py-8 absolute left-0;
-}
-
 .hour.business {
-  @apply bg-blue-800 relative;
+  @apply bg-blue-800;
 }
 
 .hour.business:nth-child(2n) {
   @apply bg-blue-900;
 }
 
-.hour.business:nth-child(24n + 11)::before {
-  content: '';
-  @apply border-l py-8 absolute left-0;
-}
-
-.hour.business:nth-child(24n + 19)::after {
-  content: '';
-  @apply border-r py-8 absolute right-0;
+.hour.current {
+  @apply bg-yellow-400 text-gray-900 !important;
 }
 
 .hour .label {
   top: -18px;
-  left: 6px;
-  @apply absolute text-gray-100;
+  @apply absolute left-2 text-gray-100 whitespace-nowrap;
 }
 
-.hour .label.alt {
-  left: auto;
-  right: 6px;
+.hour .label.right {
+  @apply left-auto right-2;
+}
+
+.hour .indicator {
+  @apply border-l py-8 absolute left-0;
+}
+
+.hour .indicator.right {
+  @apply left-auto right-0;
 }
