--- a/styles/timeline/TimeDisplay.module.css
+++ b/styles/timeline/TimeDisplay.module.css
@@ -14,10 +14,18 @@
   @apply flex items-center text-2xl font-bold;
 }
 
+.display > .left > h2 > input {
+  @apply w-24 text-xl leading-8 font-bold bg-gray-700 rounded-sm text-center px-2;
+}
+
 .display > .left > h2 > svg {
   @apply ml-2 text-sm opacity-60;
 }
 
 .display > .left > h3 {
   @apply text-xs font-bold;
+}
+
+.display > .right {
+  @apply flex items-center gap-2;
 }
